# nexova

./: .gitignore  Nexova.slnx  README.md  Vistora.slnx  nexova.slnx  requests.http
.github/workflows/: dotnet.yml  rust.yml
assets/: orders.csv  orders_timeseries.csv  sample_queries.sql  sample_query_requests.http
csharp/: Vistora.slnx
data/: customers.csv  sample_query_requests.http
engine/vistora-engine/: Cargo.toml
rust/vistora-engine/: .gitignore  Cargo.toml  s3.config.example.json
rust/vistora-engine/src/: error.rs  lib.rs  main.rs
rust/vistora-engine/src/api/: mod.rs  schema.rs
rust/vistora-engine/src/engine/: executor.rs  types.rs
rust/vistora-engine/src/engine/backend/: registry.rs
rust/vistora-engine/src/engine/federated/: databases.rs  files.rs  mod.rs
rust/vistora-engine/src/engine/files/: csv.rs  excel.rs  json.rs  mod.rs  parquet.rs  remote.rs
rust/vistora-engine/src/engine/providers/: mod.rs
rust/vistora-engine/src/models/: mod.rs  request.rs
rust/vistora-engine/tests/: file_sources.rs
src/Nexova.Connectors/: DataFusionConnectorBuilderExtensions.cs  DataFusionQueryExecutor.cs  FileConnector.cs  MySqlConnector.cs  Nexova.Connectors.csproj  PostgreSqlConnector.cs
src/Nexova.Core/: Nexova.Core.csproj
src/Nexova.Database.PostgreSql/: Nexova.Database.PostgreSql.csproj  PostgreSqlContext.cs  PostgreSqlDataSourceStore.cs  PostgreSqlDatabaseBuilderExtensions.cs  PostgreSqlDatasetStore.cs
src/Nexova.Storage.Aws/: S3StorageOptions.cs  (+3 more)
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+209 files in other folders)
