[package]
name = "vistora-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8"
calamine = "0.35.0"
datafusion = "53.1.0"
datafusion-federation = "0.5.3"
datafusion-table-providers = { version = "0.11", features = ["postgres-federation", "mysql-federation", "clickhouse-federation", "mongodb", "sqlite-federation"] }
futures = "0.3"
object_store = { version = "0.13", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.61.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
mysql_async = "0.36.2"
parquet = "58.3.0"
rust_xlsxwriter = "0.95.0"
tempfile = "3.27.0"
tokio-postgres = "0.7.17"
